Add 1st version harness that verify a method

--- a/notebooks/test_chatgpt.ipynb
+++ b/notebooks/test_chatgpt.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "7c1c2d64-ccae-4169-a10c-018e04c49a12",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<OpenAIObject list at 0x7f163ade3e90> JSON: {\n",
+       "<OpenAIObject list at 0x7f163ad9f710> JSON: {\n",
        "  \"object\": \"list\",\n",
        "  \"data\": [\n",
        "    {\n",
@@ -445,6 +445,30 @@
        "      \"parent\": null\n",
        "    },\n",
        "    {\n",
+       "      \"id\": \"gpt-3.5-turbo\",\n",
+       "      \"object\": \"model\",\n",
+       "      \"created\": 1677610602,\n",
+       "      \"owned_by\": \"openai\",\n",
+       "      \"permission\": [\n",
+       "        {\n",
+       "          \"id\": \"modelperm-AxDBRJabwECMXIek9TaOeaaK\",\n",
+       "          \"object\": \"model_permission\",\n",
+       "          \"created\": 1697590620,\n",
+       "          \"allow_create_engine\": false,\n",
+       "          \"allow_sampling\": true,\n",
+       "          \"allow_logprobs\": true,\n",
+       "          \"allow_search_indices\": false,\n",
+       "          \"allow_view\": true,\n",
+       "          \"allow_fine_tuning\": false,\n",
+       "          \"organization\": \"*\",\n",
+       "          \"group\": null,\n",
+       "          \"is_blocking\": false\n",
+       "        }\n",
+       "      ],\n",
+       "      \"root\": \"gpt-3.5-turbo\",\n",
+       "      \"parent\": null\n",
+       "    },\n",
+       "    {\n",
        "      \"id\": \"davinci-search-query\",\n",
        "      \"object\": \"model\",\n",
        "      \"created\": 1651172505,\n",
@@ -538,30 +562,6 @@
        "        }\n",
        "      ],\n",
        "      \"root\": \"text-search-davinci-query-001\",\n",
-       "      \"parent\": null\n",
-       "    },\n",
-       "    {\n",
-       "      \"id\": \"gpt-3.5-turbo\",\n",
-       "      \"object\": \"model\",\n",
-       "      \"created\": 1677610602,\n",
-       "      \"owned_by\": \"openai\",\n",
-       "      \"permission\": [\n",
-       "        {\n",
-       "          \"id\": \"modelperm-ZwvawC6vqqGswV9fdDUlG4PR\",\n",
-       "          \"object\": \"model_permission\",\n",
-       "          \"created\": 1697573101,\n",
-       "          \"allow_create_engine\": false,\n",
-       "          \"allow_sampling\": true,\n",
-       "          \"allow_logprobs\": true,\n",
-       "          \"allow_search_indices\": false,\n",
-       "          \"allow_view\": true,\n",
-       "          \"allow_fine_tuning\": false,\n",
-       "          \"organization\": \"*\",\n",
-       "          \"group\": null,\n",
-       "          \"is_blocking\": false\n",
-       "        }\n",
-       "      ],\n",
-       "      \"root\": \"gpt-3.5-turbo\",\n",
        "      \"parent\": null\n",
        "    },\n",
        "    {\n",
@@ -949,30 +949,6 @@
        "      \"parent\": null\n",
        "    },\n",
        "    {\n",
-       "      \"id\": \"gpt-3.5-turbo-0613\",\n",
-       "      \"object\": \"model\",\n",
-       "      \"created\": 1686587434,\n",
-       "      \"owned_by\": \"openai\",\n",
-       "      \"permission\": [\n",
-       "        {\n",
-       "          \"id\": \"modelperm-ooh1SOJlBEOEvTFvITIXi88B\",\n",
-       "          \"object\": \"model_permission\",\n",
-       "          \"created\": 1697573497,\n",
-       "          \"allow_create_engine\": false,\n",
-       "          \"allow_sampling\": true,\n",
-       "          \"allow_logprobs\": true,\n",
-       "          \"allow_search_indices\": false,\n",
-       "          \"allow_view\": true,\n",
-       "          \"allow_fine_tuning\": false,\n",
-       "          \"organization\": \"*\",\n",
-       "          \"group\": null,\n",
-       "          \"is_blocking\": false\n",
-       "        }\n",
-       "      ],\n",
-       "      \"root\": \"gpt-3.5-turbo-0613\",\n",
-       "      \"parent\": null\n",
-       "    },\n",
-       "    {\n",
        "      \"id\": \"text-embedding-ada-002\",\n",
        "      \"object\": \"model\",\n",
        "      \"created\": 1671217299,\n",
@@ -1285,30 +1261,6 @@
        "      \"parent\": null\n",
        "    },\n",
        "    {\n",
-       "      \"id\": \"gpt-3.5-turbo-16k-0613\",\n",
-       "      \"object\": \"model\",\n",
-       "      \"created\": 1685474247,\n",
-       "      \"owned_by\": \"openai\",\n",
-       "      \"permission\": [\n",
-       "        {\n",
-       "          \"id\": \"modelperm-Hk9J34s4hlEGFpmvYhhEdeso\",\n",
-       "          \"object\": \"model_permission\",\n",
-       "          \"created\": 1695243588,\n",
-       "          \"allow_create_engine\": false,\n",
-       "          \"allow_sampling\": true,\n",
-       "          \"allow_logprobs\": true,\n",
-       "          \"allow_search_indices\": false,\n",
-       "          \"allow_view\": true,\n",
-       "          \"allow_fine_tuning\": false,\n",
-       "          \"organization\": \"*\",\n",
-       "          \"group\": null,\n",
-       "          \"is_blocking\": false\n",
-       "        }\n",
-       "      ],\n",
-       "      \"root\": \"gpt-3.5-turbo-16k-0613\",\n",
-       "      \"parent\": null\n",
-       "    },\n",
-       "    {\n",
        "      \"id\": \"text-davinci-003\",\n",
        "      \"object\": \"model\",\n",
        "      \"created\": 1669599635,\n",
@@ -1451,18 +1403,68 @@
        "      ],\n",
        "      \"root\": \"gpt-4-0314\",\n",
        "      \"parent\": null\n",
+       "    },\n",
+       "    {\n",
+       "      \"id\": \"gpt-3.5-turbo-16k-0613\",\n",
+       "      \"object\": \"model\",\n",
+       "      \"created\": 1685474247,\n",
+       "      \"owned_by\": \"openai\",\n",
+       "      \"permission\": [\n",
+       "        {\n",
+       "          \"id\": \"modelperm-Ph2SoAN0FQs88A5G22o8RYiW\",\n",
+       "          \"object\": \"model_permission\",\n",
+       "          \"created\": 1697641230,\n",
+       "          \"allow_create_engine\": false,\n",
+       "          \"allow_sampling\": true,\n",
+       "          \"allow_logprobs\": true,\n",
+       "          \"allow_search_indices\": false,\n",
+       "          \"allow_view\": true,\n",
+       "          \"allow_fine_tuning\": false,\n",
+       "          \"organization\": \"*\",\n",
+       "          \"group\": null,\n",
+       "          \"is_blocking\": false\n",
+       "        }\n",
+       "      ],\n",
+       "      \"root\": \"gpt-3.5-turbo-16k-0613\",\n",
+       "      \"parent\": null\n",
+       "    },\n",
+       "    {\n",
+       "      \"id\": \"gpt-3.5-turbo-0613\",\n",
+       "      \"object\": \"model\",\n",
+       "      \"created\": 1686587434,\n",
+       "      \"owned_by\": \"openai\",\n",
+       "      \"permission\": [\n",
+       "        {\n",
+       "          \"id\": \"modelperm-PF1Ag7u8AeiiBC8RCWcpN2UR\",\n",
+       "          \"object\": \"model_permission\",\n",
+       "          \"created\": 1697589886,\n",
+       "          \"allow_create_engine\": false,\n",
+       "          \"allow_sampling\": true,\n",
+       "          \"allow_logprobs\": true,\n",
+       "          \"allow_search_indices\": false,\n",
+       "          \"allow_view\": true,\n",
+       "          \"allow_fine_tuning\": false,\n",
+       "          \"organization\": \"*\",\n",
+       "          \"group\": null,\n",
+       "          \"is_blocking\": false\n",
+       "        }\n",
+       "      ],\n",
+       "      \"root\": \"gpt-3.5-turbo-0613\",\n",
+       "      \"parent\": null\n",
        "    }\n",
        "  ]\n",
        "}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import openai\n",
+    "import os\n",
+    "\n",
     "openai.api_key = os.getenv(\"OPENAI_API_KEY\")\n",
     "openai.Model.list()"
    ]
@@ -1489,7 +1491,9 @@
    "source": [
     "# Programs to train\n",
     "def get_prompt_1(answer=False):\n",
-    "    possible_line_to_add =\"\\n+     assert |FlattenReverse(s[..|s|-1])| <= (|s|-1) * j;\" if answer else \"\"\n",
+    "    possible_line_to_add = (\n",
+    "        \"\\n+     assert |FlattenReverse(s[..|s|-1])| <= (|s|-1) * j;\" if answer else \"\"\n",
+    "    )\n",
     "\n",
     "    p1 = f\"\"\"\n",
     "lemma LemmaFlattenLengthLeMul<T>(s: seq<seq<T>>, j: int)\n",
@@ -1503,6 +1507,7 @@
     "  }}\n",
     "    \"\"\"\n",
     "    return p1\n",
+    "\n",
     "\n",
     "get_prompt_1()"
    ]
@@ -1548,7 +1553,11 @@
    ],
    "source": [
     "def get_prompt_2(answer=False):\n",
-    "    possible_line_to_add = \"\\n+     assert ToNatRight(xs[..i+1]) != ToNatRight(ys[..i+1]);\" if answer else \"\"\n",
+    "    possible_line_to_add = (\n",
+    "        \"\\n+     assert ToNatRight(xs[..i+1]) != ToNatRight(ys[..i+1]);\"\n",
+    "        if answer\n",
+    "        else \"\"\n",
+    "    )\n",
     "    p2 = f\"\"\"\n",
     "lemma LemmaSeqPrefixNeq(xs: seq<uint>, ys: seq<uint>, i: nat)\n",
     "    requires 0 <= i <= |xs| == |ys|\n",
@@ -1576,6 +1585,7 @@
     "  }}\n",
     "    \"\"\"\n",
     "    return p2\n",
+    "\n",
     "\n",
     "print(get_prompt_2(answer=False))"
    ]
@@ -1637,7 +1647,8 @@
    ],
    "source": [
     "def get_prompt_3(answer=False):\n",
-    "    p3_line_to_add =\"\"\"\n",
+    "    p3_line_to_add = (\n",
+    "        \"\"\"\n",
     "+ calc {\n",
     "+     Serialize(Deserialize(b));\n",
     "+   == // Definitions of Serialize, Deserialize\n",
@@ -1648,7 +1659,10 @@
     "+     Seq.Map(b => b, b);\n",
     "+   == // Identity function\n",
     "+    b;\n",
-    "+   }\"\"\" if answer else \"\"\n",
+    "+   }\"\"\"\n",
+    "        if answer\n",
+    "        else \"\"\n",
+    "    )\n",
     "    p3 = f\"\"\"\n",
     "  type byte = BoundedInts.uint8\n",
     "  /**\n",
@@ -1681,6 +1695,7 @@
     "  }}\n",
     "    \"\"\"\n",
     "    return p3\n",
+    "\n",
     "\n",
     "print(get_prompt_3(answer=True))"
    ]
@@ -1876,36 +1891,18 @@
    "outputs": [],
    "source": [
     "response = openai.ChatCompletion.create(\n",
-    "  model=\"gpt-4\",\n",
-    "  messages=[{\n",
-    "        \"role\": \"system\",\n",
-    "        \"content\": system_prompt\n",
-    "      },\n",
-    "      {\n",
-    "        \"role\": \"user\",\n",
-    "        \"content\": user_content_1\n",
-    "      },\n",
-    "      {\n",
-    "        \"role\": \"assistant\",\n",
-    "        \"content\": assistant_content_1\n",
-    "      },\n",
-    "      {\n",
-    "        \"role\": \"user\",\n",
-    "        \"content\": user_content_3\n",
-    "      },\n",
-    "      {\n",
-    "        \"role\": \"assistant\",\n",
-    "        \"content\": assistant_content_3\n",
-    "      },\n",
-    "      {\n",
-    "        \"role\": \"user\",\n",
-    "        \"content\": user_content_2\n",
-    "      }\n",
+    "    model=\"gpt-4\",\n",
+    "    messages=[\n",
+    "        {\"role\": \"system\", \"content\": system_prompt},\n",
+    "        {\"role\": \"user\", \"content\": user_content_1},\n",
+    "        {\"role\": \"assistant\", \"content\": assistant_content_1},\n",
+    "        {\"role\": \"user\", \"content\": user_content_3},\n",
+    "        {\"role\": \"assistant\", \"content\": assistant_content_3},\n",
+    "        {\"role\": \"user\", \"content\": user_content_2},\n",
     "    ],\n",
-    "  temperature=0,\n",
-    "  max_tokens=1024\n",
-    ")\n",
-    "\n"
+    "    temperature=0,\n",
+    "    max_tokens=1024,\n",
+    ")"
    ]
   },
   {
@@ -1970,34 +1967,17 @@
     "{proof}\n",
     "    \"\"\"\n",
     "    response = openai.ChatCompletion.create(\n",
-    "      model=\"gpt-4\",\n",
-    "      messages=[{\n",
-    "        \"role\": \"system\",\n",
-    "        \"content\": system_prompt\n",
-    "      },\n",
-    "      {\n",
-    "        \"role\": \"user\",\n",
-    "        \"content\": user_content_1\n",
-    "      },\n",
-    "      {\n",
-    "        \"role\": \"assistant\",\n",
-    "        \"content\": assistant_content_1\n",
-    "      },\n",
-    "      {\n",
-    "        \"role\": \"user\",\n",
-    "        \"content\": user_content_3\n",
-    "      },\n",
-    "      {\n",
-    "        \"role\": \"assistant\",\n",
-    "        \"content\": assistant_content_3\n",
-    "      },\n",
-    "      {\n",
-    "        \"role\": \"user\",\n",
-    "        \"content\": user_question\n",
-    "      }\n",
-    "    ],\n",
-    "  temperature=0,\n",
-    "  max_tokens=1024\n",
+    "        model=\"gpt-4\",\n",
+    "        messages=[\n",
+    "            {\"role\": \"system\", \"content\": system_prompt},\n",
+    "            {\"role\": \"user\", \"content\": user_content_1},\n",
+    "            {\"role\": \"assistant\", \"content\": assistant_content_1},\n",
+    "            {\"role\": \"user\", \"content\": user_content_3},\n",
+    "            {\"role\": \"assistant\", \"content\": assistant_content_3},\n",
+    "            {\"role\": \"user\", \"content\": user_question},\n",
+    "        ],\n",
+    "        temperature=0,\n",
+    "        max_tokens=1024,\n",
     "    )\n",
     "    return response[\"choices\"][0][\"message\"][\"content\"]"
    ]
@@ -2011,6 +1991,7 @@
    "source": [
     "DIRECTORY = \"./unstable_proofs\"\n",
     "\n",
+    "\n",
     "def process_directory(directory_path):\n",
     "    result_dict = {}\n",
     "\n",
@@ -2022,7 +2003,7 @@
     "        if os.path.isdir(file_path):\n",
     "            continue\n",
     "\n",
-    "        with open(file_path, 'r') as file:\n",
+    "        with open(file_path, \"r\") as file:\n",
     "            # Read all lines\n",
     "            lines = file.readlines()\n",
     "\n",
@@ -2033,13 +2014,13 @@
     "            content_lines = lines[:-1]\n",
     "\n",
     "            # Join the content lines into a string\n",
-    "            content = ''.join(content_lines)\n",
-    "\n",
+    "            content = \"\".join(content_lines)\n",
     "\n",
     "            # Create a dictionary entry\n",
-    "            result_dict[filename] = {'content': content, 'link': link}\n",
+    "            result_dict[filename] = {\"content\": content, \"link\": link}\n",
     "\n",
     "    return result_dict\n",
+    "\n",
     "\n",
     "proofs_to_fix = process_directory(DIRECTORY)"
    ]
@@ -2191,7 +2172,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DIRECTORY_ROUND2= \"./unstable_proofs/round2\"\n",
+    "DIRECTORY_ROUND2 = \"./unstable_proofs/round2\"\n",
     "proofs_to_fix_2 = process_directory(DIRECTORY_ROUND2)"
    ]
   },
