add nfold whole exp script

--- a/notebooks/analysis_multiexp.ipynb
+++ b/notebooks/analysis_multiexp.ipynb
@@ -1116,7 +1116,11 @@
     ")\n",
     "\n",
     "df_methods_non_html = pd.DataFrame.from_dict(\n",
-    "    {(i, j): methods_non_html[i][j] for i in methods_non_html.keys() for j in methods_non_html[i].keys()},\n",
+    "    {\n",
+    "        (i, j): methods_non_html[i][j]\n",
+    "        for i in methods_non_html.keys()\n",
+    "        for j in methods_non_html[i].keys()\n",
+    "    },\n",
     "    orient=\"index\",\n",
     ")\n",
     "\n",
@@ -1160,8 +1164,7 @@
     "successes_data = {}\n",
     "\n",
     "for (method, benchmark), df in results.items():\n",
-    "\n",
-    "    cumulative_successes = [0*10]\n",
+    "    cumulative_successes = [0 * 10]\n",
     "    # Iterate over the range of tries\n",
     "    for try_number in range(10):\n",
     "        # Get the successes for the current try and all previous tries\n",
@@ -1171,7 +1174,7 @@
     "        # Count the number of unique indices that were successful\n",
     "        cumulative_successes.append(successes[\"Index\"].nunique())\n",
     "\n",
-    "    successes_data[(method, benchmark)] = cumulative_successes "
+    "    successes_data[(method, benchmark)] = cumulative_successes"
    ]
   },
   {
@@ -1187,9 +1190,7 @@
     "    total_indices = results[(method, benchmark)][\"Index\"].nunique()\n",
     "    normalized_cumulative_success[(method, benchmark)] = [\n",
     "        100.0 * successes / total_indices for successes in cumulative_successes\n",
-    "    ]\n",
-    "  \n",
-    "    "
+    "    ]"
    ]
   },
   {
@@ -1210,9 +1211,9 @@
     "# Group data by benchmark\n",
     "grouped_data = {}\n",
     "for (method, benchmark), data in normalized_cumulative_success.items():\n",
-    "  if benchmark not in grouped_data:\n",
-    "    grouped_data[benchmark] = {}\n",
-    "  grouped_data[benchmark][method] = data"
+    "    if benchmark not in grouped_data:\n",
+    "        grouped_data[benchmark] = {}\n",
+    "    grouped_data[benchmark][method] = data"
    ]
   },
   {
@@ -1239,30 +1240,36 @@
     }
    ],
    "source": [
-    "\n",
-    "\n",
-    "\n",
     "# Plot data\n",
-    "fig, axs = plt.subplots(nrows=1, ncols=3,  figsize=(24, 6))\n",
-    "colors = ['b', 'g', 'r', 'c', 'm', 'y', 'k']\n",
-    "color_map = {method: colors[i % len(colors)] for i, method in enumerate([\"error+placeholder\", \"placeholder\", \"error\", \"baseline\"])}\n",
+    "fig, axs = plt.subplots(nrows=1, ncols=3, figsize=(24, 6))\n",
+    "colors = [\"b\", \"g\", \"r\", \"c\", \"m\", \"y\", \"k\"]\n",
+    "color_map = {\n",
+    "    method: colors[i % len(colors)]\n",
+    "    for i, method in enumerate(\n",
+    "        [\"error+placeholder\", \"placeholder\", \"error\", \"baseline\"]\n",
+    "    )\n",
+    "}\n",
     "print(color_map)\n",
     "i = 0\n",
     "benchmarks = [\"libraries-basic\", \"cedar-basic\", \"vmc-basic\"]\n",
     "methods_name = [\"baseline\", \"error\", \"placeholder\", \"errorplaceholder\"]\n",
     "for benchmark in benchmarks:\n",
-    "  # axs[i](figsize=(10, 6))\n",
-    "  for method in methods_name:\n",
-    "    method_name = method\n",
-    "    if method == \"errorplaceholder\":\n",
-    "      method_name = \"error+placeholder\"\n",
-    "    axs[i].plot(grouped_data[benchmark][method], label=method_name, color=color_map[method_name])\n",
-    "  axs[i].set_title(f'{benchmark[:-6]}',fontsize=15)\n",
-    "  axs[i].set_xlabel('Number of attempts',fontsize=15)\n",
-    "  axs[i].set_ylabel('Percentage of verified lemmas',fontsize=15)\n",
-    "  axs[i].legend(fontsize=10)\n",
-    "  i+=1\n",
-    "plt.savefig('../fig/benchs_placeholder.pdf',bbox_inches='tight')\n",
+    "    # axs[i](figsize=(10, 6))\n",
+    "    for method in methods_name:\n",
+    "        method_name = method\n",
+    "        if method == \"errorplaceholder\":\n",
+    "            method_name = \"error+placeholder\"\n",
+    "        axs[i].plot(\n",
+    "            grouped_data[benchmark][method],\n",
+    "            label=method_name,\n",
+    "            color=color_map[method_name],\n",
+    "        )\n",
+    "    axs[i].set_title(f\"{benchmark[:-6]}\", fontsize=15)\n",
+    "    axs[i].set_xlabel(\"Number of attempts\", fontsize=15)\n",
+    "    axs[i].set_ylabel(\"Percentage of verified lemmas\", fontsize=15)\n",
+    "    axs[i].legend(fontsize=10)\n",
+    "    i += 1\n",
+    "plt.savefig(\"../fig/benchs_placeholder.pdf\", bbox_inches=\"tight\")\n",
     "\n",
     "plt.show()"
    ]
@@ -1293,7 +1300,7 @@
    ],
    "source": [
     "for (method, benchmark), data in normalized_cumulative_success.items():\n",
-    "  print(f\"final: {method}, {benchmark}: {data[-1]}\")"
+    "    print(f\"final: {method}, {benchmark}: {data[-1]}\")"
    ]
   },
   {
@@ -1329,28 +1336,32 @@
    "source": [
     "total_normalized_cumulative_success = {}\n",
     "for benchmark in grouped_data:\n",
-    "  for method in grouped_data[benchmark]:\n",
-    "    if method not in total_normalized_cumulative_success:\n",
-    "      total_normalized_cumulative_success[method] = [0] * 11\n",
-    "    total_normalized_cumulative_success[method] = [\n",
-    "        x + y for x, y in zip(total_normalized_cumulative_success[method], grouped_data[benchmark][method])\n",
-    "    ]\n",
+    "    for method in grouped_data[benchmark]:\n",
+    "        if method not in total_normalized_cumulative_success:\n",
+    "            total_normalized_cumulative_success[method] = [0] * 11\n",
+    "        total_normalized_cumulative_success[method] = [\n",
+    "            x + y\n",
+    "            for x, y in zip(\n",
+    "                total_normalized_cumulative_success[method],\n",
+    "                grouped_data[benchmark][method],\n",
+    "            )\n",
+    "        ]\n",
     "\n",
     "for method, data in total_normalized_cumulative_success.items():\n",
-    "  total_normalized_cumulative_success[method] = [x / len(grouped_data) for x in data]\n",
-    "  print(total_normalized_cumulative_success[method])\n",
-    "  print(f\"final: {method}: {total_normalized_cumulative_success[method][-1]}\")\n",
+    "    total_normalized_cumulative_success[method] = [x / len(grouped_data) for x in data]\n",
+    "    print(total_normalized_cumulative_success[method])\n",
+    "    print(f\"final: {method}: {total_normalized_cumulative_success[method][-1]}\")\n",
     "\n",
-    "plt.figure(figsize=(10,6))\n",
+    "plt.figure(figsize=(10, 6))\n",
     "for method, data in total_normalized_cumulative_success.items():\n",
-    "  if method == \"errorplaceholder\":\n",
-    "    method = \"error+placeholder\"\n",
-    "  plt.plot(data, label=method,color=color_map[method])\n",
-    "  plt.title(f'Entire dataset',fontsize=15)\n",
-    "  plt.xlabel('Number of attempts',  fontsize=15)\n",
-    "  plt.ylabel('Percentage of verified lemmas', fontsize=15)\n",
-    "  plt.legend(fontsize=10)\n",
-    "plt.savefig('../fig/entire_dataset_placeholder.pdf', bbox_inches='tight')\n",
+    "    if method == \"errorplaceholder\":\n",
+    "        method = \"error+placeholder\"\n",
+    "    plt.plot(data, label=method, color=color_map[method])\n",
+    "    plt.title(f\"Entire dataset\", fontsize=15)\n",
+    "    plt.xlabel(\"Number of attempts\", fontsize=15)\n",
+    "    plt.ylabel(\"Percentage of verified lemmas\", fontsize=15)\n",
+    "    plt.legend(fontsize=10)\n",
+    "plt.savefig(\"../fig/entire_dataset_placeholder.pdf\", bbox_inches=\"tight\")\n",
     "plt.show()"
    ]
   },
@@ -1360,8 +1371,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "placeholder = set(df_methods_non_html[df_methods_non_html.apply(lambda row: any('placeholder' in sublist for sublist in row[\"Success\"]), axis=1)].index)\n",
-    "errorplaceholder = set(df_methods_non_html[df_methods_non_html.apply(lambda row: any('ep' in sublist for sublist in row[\"Success\"]), axis=1)].index)"
+    "placeholder = set(\n",
+    "    df_methods_non_html[\n",
+    "        df_methods_non_html.apply(\n",
+    "            lambda row: any(\"placeholder\" in sublist for sublist in row[\"Success\"]),\n",
+    "            axis=1,\n",
+    "        )\n",
+    "    ].index\n",
+    ")\n",
+    "errorplaceholder = set(\n",
+    "    df_methods_non_html[\n",
+    "        df_methods_non_html.apply(\n",
+    "            lambda row: any(\"ep\" in sublist for sublist in row[\"Success\"]), axis=1\n",
+    "        )\n",
+    "    ].index\n",
+    ")"
    ]
   },
   {
@@ -1382,8 +1406,12 @@
    ],
    "source": [
     "from matplotlib_venn import venn2, venn3\n",
-    "venn = venn2([placeholder, errorplaceholder], set_labels = ('placeholder', 'error+placeholder', 'Both'))\n",
-    "plt.savefig('../fig/venn_placeholder.pdf', bbox_inches='tight')\n",
+    "\n",
+    "venn = venn2(\n",
+    "    [placeholder, errorplaceholder],\n",
+    "    set_labels=(\"placeholder\", \"error+placeholder\", \"Both\"),\n",
+    ")\n",
+    "plt.savefig(\"../fig/venn_placeholder.pdf\", bbox_inches=\"tight\")\n",
     "plt.show()"
    ]
   }
