--- a/notebooks/nb_tries_analysis.ipynb
+++ b/notebooks/nb_tries_analysis.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -511,14 +511,16 @@
     "# open csv using pandas\n",
     "lib_sample_results = \"../results_llm/stats_llm_libraries_sample10_context.csv\"\n",
     "cedar_sample_results = \"../results_llm/stats_llm_cedar_sample10_context.csv\"\n",
-    "vmc_sample_results = \"../results_llm/stats_llm_DafnyVMC_sample10_error_n_feedback_6t.csv\"\n",
+    "vmc_sample_results = (\n",
+    "    \"../results_llm/stats_llm_DafnyVMC_sample10_error_n_feedback_6t.csv\"\n",
+    ")\n",
     "\n",
     "df_cedar = pd.read_csv(cedar_sample_results)\n",
     "df_lib = pd.read_csv(lib_sample_results)\n",
     "df_vmc = pd.read_csv(vmc_sample_results)\n",
     "\n",
     "df = pd.concat([df_cedar, df_lib, df_vmc], ignore_index=True)\n",
-    "df['Try'] = df['Try'] + 1\n",
+    "df[\"Try\"] = df[\"Try\"] + 1\n",
     "df"
    ]
   },
@@ -994,8 +996,7 @@
     }
    ],
    "source": [
-    "\n",
-    "df_correct = df[df['New Method Result'] == 'Correct']\n",
+    "df_correct = df[df[\"New Method Result\"] == \"Correct\"]\n",
     "df_correct.head()\n",
     "df_correct"
    ]
@@ -1042,14 +1043,14 @@
     }
    ],
    "source": [
-    "cumulative_counts = df_correct['Try'].value_counts().sort_index().cumsum()\n",
+    "cumulative_counts = df_correct[\"Try\"].value_counts().sort_index().cumsum()\n",
     "cumulative_counts = cumulative_counts.reindex(range(1, 11)).ffill()\n",
     "# Find the first non-NaN value\n",
     "first_valid = cumulative_counts.first_valid_index()\n",
     "\n",
     "# Replace all values until the first non-NaN value with 0\n",
-    "cumulative_counts.loc[:first_valid-1] = 0\n",
-    "print(cumulative_counts)\n"
+    "cumulative_counts.loc[: first_valid - 1] = 0\n",
+    "print(cumulative_counts)"
    ]
   },
   {
@@ -1069,15 +1070,15 @@
     }
    ],
    "source": [
-    "\n",
-    "\n",
-    "cumulative_counts.plot(kind='line', marker='o', figsize=(12, 6))\n",
-    "plt.xlabel('Number of Tries')\n",
-    "plt.ylabel('Cumulative Number of Verified Methods')\n",
+    "cumulative_counts.plot(kind=\"line\", marker=\"o\", figsize=(12, 6))\n",
+    "plt.xlabel(\"Number of Tries\")\n",
+    "plt.ylabel(\"Cumulative Number of Verified Methods\")\n",
     "import numpy as np\n",
     "\n",
-    "plt.xticks(np.arange(min(cumulative_counts.index), max(cumulative_counts.index)+1, 1.0))\n",
-    "plt.yticks(np.arange(min(cumulative_counts), max(cumulative_counts)+1, 1.0))\n",
+    "plt.xticks(\n",
+    "    np.arange(min(cumulative_counts.index), max(cumulative_counts.index) + 1, 1.0)\n",
+    ")\n",
+    "plt.yticks(np.arange(min(cumulative_counts), max(cumulative_counts) + 1, 1.0))\n",
     "plt.grid(True)\n",
     "plt.show()"
    ]
@@ -1099,9 +1100,9 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('../results_llm/output_static_libraries.csv')\n",
-    "df_correct = df[df['New Method Result'] == 'Correct']\n",
-    "cumulative_counts = df_correct['Try'].value_counts().sort_index().cumsum()\n",
+    "df = pd.read_csv(\"../results_llm/output_static_libraries.csv\")\n",
+    "df_correct = df[df[\"New Method Result\"] == \"Correct\"]\n",
+    "cumulative_counts = df_correct[\"Try\"].value_counts().sort_index().cumsum()\n",
     "print(cumulative_counts)"
    ]
   }
