--- a/notebooks/prep_training_set.ipynb
+++ b/notebooks/prep_training_set.ipynb
@@ -61,8 +61,6 @@
     "\n",
     "        # split the dataset using k fold cross validation\n",
     "\n",
-    "        \n",
-    "\n",
     "        # save the datasets\n",
     "        training.to_csv(f\"../results/training_{dataset}.csv\", index=False)\n",
     "        testing.to_csv(f\"../results/testing_{dataset}.csv\", index=False)\n",
@@ -88,19 +86,30 @@
     }
    ],
    "source": [
-    "\n",
     "k = 3\n",
     "benchmarks = {}\n",
     "for dataset in datasets:\n",
     "    print(\"Processing\", dataset)\n",
-    "    all_training_files_exist = all(os.path.exists(f\"../results/training_{dataset}_k{k}_{i}.csv\") for i in range(0, k))\n",
-    "    all_testing_files_exist = all(os.path.exists(f\"../results/testing_{dataset}_k{k}_{i}.csv\") for i in range(0, k))\n",
+    "    all_training_files_exist = all(\n",
+    "        os.path.exists(f\"../results/training_{dataset}_k{k}_{i}.csv\")\n",
+    "        for i in range(0, k)\n",
+    "    )\n",
+    "    all_testing_files_exist = all(\n",
+    "        os.path.exists(f\"../results/testing_{dataset}_k{k}_{i}.csv\")\n",
+    "        for i in range(0, k)\n",
+    "    )\n",
     "\n",
     "    if all_testing_files_exist and all_training_files_exist:\n",
     "        print(f\"Training and testing datasets already exist for {dataset}\")\n",
     "        benchmarks[dataset] = {\n",
-    "            \"training\": [pd.read_csv(f\"../results/training_{dataset}_k{k}_{i}.csv\") for i in range(0, k)],\n",
-    "            \"testing\": [pd.read_csv(f\"../results/testing_{dataset}_k{k}_{i}.csv\") for i in range(0, k)],\n",
+    "            \"training\": [\n",
+    "                pd.read_csv(f\"../results/training_{dataset}_k{k}_{i}.csv\")\n",
+    "                for i in range(0, k)\n",
+    "            ],\n",
+    "            \"testing\": [\n",
+    "                pd.read_csv(f\"../results/testing_{dataset}_k{k}_{i}.csv\")\n",
+    "                for i in range(0, k)\n",
+    "            ],\n",
     "        }\n",
     "        continue\n",
     "    df = pd.read_csv(f\"../results/non_verified_{dataset}.csv\")\n",
@@ -113,9 +122,8 @@
     "        lambda x: os.path.join(\"/exp/dafny_repair/results/\", os.path.basename(x))\n",
     "    )\n",
     "\n",
-    "\n",
     "    kf = KFold(n_splits=k)\n",
-    "    \n",
+    "\n",
     "    training_sets = []\n",
     "    testing_sets = []\n",
     "\n",
@@ -153,18 +161,22 @@
     }
    ],
    "source": [
-    "\n",
-    "\n",
     "# Pick 6 random examples from the training set\n",
     "for dataset in datasets:\n",
     "    print(\"Processing\", dataset)\n",
     "    training = benchmarks[dataset][\"training\"]\n",
     "    testing = benchmarks[dataset][\"testing\"]\n",
     "\n",
-    "    all_training_fold_files_exist = all(os.path.exists(f\"../results/training_{dataset}_k{k}_sample_{i}.csv\") for i in range(0, k))\n",
+    "    all_training_fold_files_exist = all(\n",
+    "        os.path.exists(f\"../results/training_{dataset}_k{k}_sample_{i}.csv\")\n",
+    "        for i in range(0, k)\n",
+    "    )\n",
     "    if all_training_fold_files_exist:\n",
     "        print(f\"Training fold datasets already exist for {dataset}\")\n",
-    "        benchmarks[dataset][\"training\"] = [pd.read_csv(f\"../results/training_{dataset}_k{k}_sample_{i}.csv\") for i in range(0, k)]\n",
+    "        benchmarks[dataset][\"training\"] = [\n",
+    "            pd.read_csv(f\"../results/training_{dataset}_k{k}_sample_{i}.csv\")\n",
+    "            for i in range(0, k)\n",
+    "        ]\n",
     "        continue\n",
     "\n",
     "    # pick 6 random examples from the training set\n",
@@ -196,14 +208,26 @@
     "k = 3\n",
     "for dataset in datasets:\n",
     "    print(\"Processing\", dataset)\n",
-    "    all_training_files_exist = all(os.path.exists(f\"../results/training_{dataset}_k{k}__{i}.csv\") for i in range(0, k))\n",
-    "    all_testing_files_exist = all(os.path.exists(f\"../results/testing_{dataset}_k{k}__{i}.csv\") for i in range(0, k))\n",
+    "    all_training_files_exist = all(\n",
+    "        os.path.exists(f\"../results/training_{dataset}_k{k}__{i}.csv\")\n",
+    "        for i in range(0, k)\n",
+    "    )\n",
+    "    all_testing_files_exist = all(\n",
+    "        os.path.exists(f\"../results/testing_{dataset}_k{k}__{i}.csv\")\n",
+    "        for i in range(0, k)\n",
+    "    )\n",
     "\n",
     "    if all_testing_files_exist and all_training_files_exist:\n",
     "        print(f\"Training and testing datasets already exist for {dataset}\")\n",
     "        benchmarks[dataset] = {\n",
-    "            \"training\": [pd.read_csv(f\"../results/training_{dataset}_k{k}__{i}.csv\") for i in range(0, k)],\n",
-    "            \"testing\": [pd.read_csv(f\"../results/training_{dataset}_k{k}__{i}.csv\") for i in range(0, k)],\n",
+    "            \"training\": [\n",
+    "                pd.read_csv(f\"../results/training_{dataset}_k{k}__{i}.csv\")\n",
+    "                for i in range(0, k)\n",
+    "            ],\n",
+    "            \"testing\": [\n",
+    "                pd.read_csv(f\"../results/training_{dataset}_k{k}__{i}.csv\")\n",
+    "                for i in range(0, k)\n",
+    "            ],\n",
     "        }\n",
     "        continue\n",
     "    df = pd.read_csv(f\"../results/non_verified_{dataset}.csv\")\n",
@@ -226,7 +250,7 @@
     "        testing = df.iloc[test_index]\n",
     "        training_sets.append(training)\n",
     "        testing_sets.append(testing)\n",
-    "    \n",
+    "\n",
     "    for i, (training, testing) in enumerate(zip(training_sets, testing_sets)):\n",
     "        testing.to_csv(f\"../results/training_{dataset}_k{k}__{i}.csv\", index=False)\n",
     "        training.to_csv(f\"../results/testing_{dataset}_k{k}__{i}.csv\", index=False)\n",
@@ -268,17 +292,28 @@
     "    training = benchmarks[dataset][\"training\"]\n",
     "    testing = benchmarks[dataset][\"testing\"]\n",
     "\n",
-    "    all_training_fold_files_exist = all(os.path.exists(f\"../results/training_{dataset}_k{k}__sample_{i}.csv\") for i in range(0, k))\n",
+    "    all_training_fold_files_exist = all(\n",
+    "        os.path.exists(f\"../results/training_{dataset}_k{k}__sample_{i}.csv\")\n",
+    "        for i in range(0, k)\n",
+    "    )\n",
     "    if all_training_fold_files_exist:\n",
     "        print(f\"Training fold datasets already exist for {dataset}\")\n",
-    "        benchmarks[dataset][\"training\"] = [pd.read_csv(f\"../results/training_{dataset}_k{k}__sample_{i}.csv\") for i in range(0, k)]\n",
+    "        benchmarks[dataset][\"training\"] = [\n",
+    "            pd.read_csv(f\"../results/training_{dataset}_k{k}__sample_{i}.csv\")\n",
+    "            for i in range(0, k)\n",
+    "        ]\n",
     "        continue\n",
     "\n",
     "    # pick 6 random examples from the training set\n",
     "    for i, training_fold in enumerate(training):\n",
     "        print(f\"training length: {len(training_fold)}\")\n",
     "        fold = training_fold.sample(n=5)\n",
-    "        print(fold.drop(columns=[\"Time Difference\"]).isin(training_fold.drop(columns=[\"Time Difference\"])).all().all())\n",
+    "        print(\n",
+    "            fold.drop(columns=[\"Time Difference\"])\n",
+    "            .isin(training_fold.drop(columns=[\"Time Difference\"]))\n",
+    "            .all()\n",
+    "            .all()\n",
+    "        )\n",
     "        fold.to_csv(f\"../results/training_{dataset}_k{k}__sample_{i}.csv\", index=False)\n",
     "        benchmarks[dataset][\"training\"][i] = fold"
    ]
@@ -490,7 +525,6 @@
    "source": [
     "content = {}\n",
     "for dataset in datasets:\n",
-    "\n",
     "    if dataset == \"cedar\":\n",
     "        df = pd.read_csv(f\"../results/non_verified_{dataset}.csv\")\n",
     "\n",
@@ -507,7 +541,7 @@
     "\n",
     "        if not os.path.exists(f\"../results/placeholder_dataset/\"):\n",
     "            os.makedirs(f\"../results/placeholder_dataset/\")\n",
-    "        \n",
+    "\n",
     "        df.to_csv(f\"../results/placeholder_dataset/{dataset}.csv\", index=False)"
    ]
   },
