--- a/notebooks/success_analysis.ipynb
+++ b/notebooks/success_analysis.ipynb
@@ -6,9 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -110,7 +109,7 @@
    "source": [
     "df.plot.bar()\n",
     "plt.xticks(rotation=0)\n",
-    "plt.ylim(0,10)\n",
+    "plt.ylim(0, 10)\n",
     "plt.ylabel(\"Successful verified methods\")\n",
     "plt.show()"
    ]
