fix the dashboard

--- a/notebooks/dashboard.ipynb
+++ b/notebooks/dashboard.ipynb
@@ -21,7 +21,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ROOT_PATH = \"/exp/dafny_repair/\""
+    "ROOT_PATH = \"../\""
    ]
   },
   {
@@ -50,11 +50,11 @@
    "outputs": [],
    "source": [
     "# row_id = 0\n",
-    "# result_filepath = \"/exp/dafny_repair/tests_package/ressources/fixes_llm_test.csv\"\n",
-    "# assertion_filepath = \"/exp/dafny_repair/tests_package/ressources/llm_test.csv\"\n",
+    "# result_filepath = \".//tests_package/ressources/fixes_llm_test.csv\"\n",
+    "# assertion_filepath = \".//tests_package/ressources/llm_test.csv\"\n",
     "# method_index = 0\n",
-    "# result_filepath = \"/exp/dafny_repair/results_llm/stats_llm_libraries_sample10_context.csv\"\n",
-    "# assertion_filepath = \"/exp/dafny_repair/samples/non_verified_libraries_sample_10.csv\""
+    "# result_filepath = \".//results_llm/stats_llm_libraries_sample10_context.csv\"\n",
+    "# assertion_filepath = \".//samples/non_verified_libraries_sample_10.csv\""
    ]
   },
   {
@@ -274,9 +274,14 @@
     }
    ],
    "source": [
+    "# accordion = widgets.Accordion(\n",
+    "#     children=[widgets.Output() for _ in range(len(result))],\n",
+    "#     titles=[f\"Try {i}\" for i in range(len(result))],\n",
+    "# )\n",
     "accordion = widgets.Accordion(\n",
     "    children=[widgets.Output() for _ in range(len(result))],\n",
-    "    titles=[f\"Try {i}\" for i in range(len(result))],\n",
+    "    titles=[f\"Try {i} feedback\" if row[\"Feedback\"]==\"True\" else f\"Try {i}\" for i, row in enumerate(result)],\n",
+    "    # titles=[f\"Try {i}\" for i in range(len(result))],\n",
     ")\n",
     "\n",
     "try_sections = []\n",
@@ -395,7 +400,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
