refactor main, remove unused function and method_index

--- a/notebooks/dashboard.ipynb
+++ b/notebooks/dashboard.ipynb
@@ -280,7 +280,10 @@
     "# )\n",
     "accordion = widgets.Accordion(\n",
     "    children=[widgets.Output() for _ in range(len(result))],\n",
-    "    titles=[f\"Try {i} feedback\" if row[\"Feedback\"]==\"True\" else f\"Try {i}\" for i, row in enumerate(result)],\n",
+    "    titles=[\n",
+    "        f\"Try {i} feedback\" if row[\"Feedback\"] == \"True\" else f\"Try {i}\"\n",
+    "        for i, row in enumerate(result)\n",
+    "    ],\n",
     "    # titles=[f\"Try {i}\" for i in range(len(result))],\n",
     ")\n",
     "\n",
