add more instructions

--- a/notebooks/dashboard.ipynb
+++ b/notebooks/dashboard.ipynb
@@ -238,7 +238,10 @@
     "    )\n",
     ")\n",
     "display(Markdown(f\"## Original Method\"))\n",
-    "base_file = assertion[\"Original File\"]\n",
+    "if \"Original File\" in assertion:\n",
+    "    base_file = assertion[\"Original File\"]\n",
+    "else:\n",
+    "    base_file = assertion[\"Original Method File\"]\n",
     "if not os.path.isabs(base_file):\n",
     "    base_file = os.path.join(ROOT_PATH, base_file)\n",
     "with open(base_file, \"r\") as file:\n",
