--- a/notebooks/getting_started_report.ipynb
+++ b/notebooks/getting_started_report.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from IPython.display import display, HTML\n"
+    "from IPython.display import display, HTML"
    ]
   },
   {
@@ -34,21 +34,21 @@
    ],
    "source": [
     "results_files = [\n",
-    "    'results_llm/lib_baseline.csv',\n",
-    "    'results_llm/lib_similarity.csv',\n",
-    "    'results_llm/cedar_baseline.csv',\n",
-    "    'results_llm/cedar_similarity.csv',\n",
-    "    'results_llm/vmc_baseline.csv',\n",
-    "    'results_llm/vmc_similarity.csv'\n",
+    "    \"results_llm/lib_baseline.csv\",\n",
+    "    \"results_llm/lib_similarity.csv\",\n",
+    "    \"results_llm/cedar_baseline.csv\",\n",
+    "    \"results_llm/cedar_similarity.csv\",\n",
+    "    \"results_llm/vmc_baseline.csv\",\n",
+    "    \"results_llm/vmc_similarity.csv\",\n",
     "]\n",
     "\n",
-    "html_content = '<ul>'\n",
+    "html_content = \"<ul>\"\n",
     "for file in results_files:\n",
     "    df = pd.read_csv(file)\n",
-    "    if 'url' in df.columns:\n",
-    "        for url in df['url']:\n",
+    "    if \"url\" in df.columns:\n",
+    "        for url in df[\"url\"]:\n",
     "            html_content += f'<li><a href=\"{url}\" target=\"_blank\">{url}</a></li>'\n",
-    "html_content += '</ul>'\n",
+    "html_content += \"</ul>\"\n",
     "\n",
     "display(HTML(html_content))"
    ]
